# desafio-target

./: 2.py  3.py  4.py  5.py  README.md  five.py  four-notebook.ipynb  four.py  one.py  pyproject.toml  tests.py  three.py  two.py
.github/workflows/: ci.yml
