[tool.poetry]
name = "desafio-target"
version = "0.1.0"
description = ""
authors = ["Henrique Sebastião <contato@henriquesebastiao.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
taskipy = "^1.14.0"
ipykernel = "^6.29.5"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR6201', 'PLR2004']

[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff format .; ruff check . --fix'
pre_test = 'task lint'
test = 'pytest -s -x -vv --cov=one --cov=two --cov=three --cov=four --cov=five tests.py'
post_test = 'coverage html'
